--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div style="background-color:rgb(198, 218, 235) ;">
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link1" aria-current="page" href="Home.html">Home</a>
+                    <a class="nav-link1" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link1" href="all_product.html">All Products</a>
